mapbox margin padding and height fixed, markers overflow hidden added and the search form is outside of the map now

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -13,8 +13,9 @@
   font-family: 'Open Sans', sans-serif;
 }
 
-.main-container {
+#search-map {
   display: flex;
+  margin-bottom: 10px !important;
 }
 
 .map-container {
@@ -36,3 +37,14 @@
 .process-card-image {
   padding-top: 10px;
 }
+
+#map {
+  overflow: hidden;
+}
+
+.mapboxgl-canvas {
+  padding: 0px !important;
+  margin-bottom: 10px;
+}
+
+
